# DefinitelyNotGPT

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
configs/: load_corpus.py  tokenizer.yaml  train_medium.yaml  train_small.yaml
scripts/: cuda.py  eval_perplexity.py  generate.py  inspect_model.py  inspect_tokenizer.py  prepare_corpus.py  train.py  train_tokenizer_hf.py
src/slm/: config.py
src/slm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/slm/model/: __init__.py  attention.py  config.py  layer_norm.py  mlp.py  rope.py  transformer.py
src/slm/mytokenizer/: __init__.py  bpe.py
src/slm/train/: checkpoint.py  config.py  schedule.py
src/slm/utils/: io.py  logging.py
tests/: test_model_shapes  test_tokenizer.py
